--- a/PreparationProj/PreparationProj.csproj
+++ b/PreparationProj/PreparationProj.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="SOLID_Principles\DIP\" />
+  </ItemGroup>
+
 </Project>
